--- a/ground/gcs/src/plugins/config/mixercurve.ui
+++ b/ground/gcs/src/plugins/config/mixercurve.ui
@@ -329,6 +329,13 @@
       <number>4</number>
      </property>
      <item>
+      <widget class="QLabel" name="inputLabelCurve2Source">
+       <property name="text">
+        <string>Input:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QComboBox" name="CBCurve2Source"/>
      </item>
      <item>
