GUI works, as does saving and loading files. Currently does not change settings because there is no method for universal settings changes.

--- a/ground/gcs/src/plugins/telemetryscheduler/telemetryscheduler.ui
+++ b/ground/gcs/src/plugins/telemetryscheduler/telemetryscheduler.ui
@@ -19,8 +19,8 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0" colspan="8">
     <widget class="QTableView" name="waypoints">
      <property name="alternatingRowColors">
       <bool>true</bool>
@@ -30,24 +30,47 @@
      </attribute>
     </widget>
    </item>
-   <item>
-    <widget class="QPushButton" name="buttonNewWaypoint">
-     <property name="text">
-      <string>New Waypoint</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="buttonSaveFile">
+   <item row="1" column="2">
+    <widget class="QPushButton" name="bnSaveTelemetryToFile">
      <property name="text">
       <string>Save to File</string>
      </property>
     </widget>
    </item>
-   <item>
-    <widget class="QPushButton" name="buttonLoadFile">
+   <item row="1" column="6">
+    <widget class="QPushButton" name="bnApplySchedule">
+     <property name="text">
+      <string>Apply</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="bnLoadTelemetryFromFile">
      <property name="text">
       <string>Load from File</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="5">
+    <widget class="QComboBox" name="cmbScheduleList"/>
+   </item>
+   <item row="1" column="3">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="1" column="4">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Load update rates:</string>
      </property>
     </widget>
    </item>
