Android Browser: Fill screen even when few objects

--- a/androidgcs/res/layout/object_browser.xml
+++ b/androidgcs/res/layout/object_browser.xml
@@ -41,12 +41,12 @@
         
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="fill_parent" >
 
             <ListView
                 android:id="@+id/object_list"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:layout_weight="2"
                 android:choiceMode="singleChoice"
                 android:drawSelectorOnTop="true" />
