--- a/androidgcs/res/layout/object_editor.xml
+++ b/androidgcs/res/layout/object_editor.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="500dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".ObjectEditor" >
     
@@ -13,6 +13,12 @@
 	    android:layout_height="64dp"
 	    android:layout_weight="1"
 	    android:gravity="right" >
+
+		<TextView
+		    android:id="@+id/object_edit_object_name"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text=""/>
 
 		<Button
 		    android:id="@+id/object_edit_load_button"
