--- a/ground/gcs/src/plugins/telemetryscheduler/telemetryscheduler.ui
+++ b/ground/gcs/src/plugins/telemetryscheduler/telemetryscheduler.ui
@@ -20,24 +20,7 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="1">
-    <widget class="QPushButton" name="bnSaveTelemetryToFile">
-     <property name="text">
-      <string>Save to File</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="3">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Load update rates:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="4">
-    <widget class="QComboBox" name="cmbScheduleList"/>
-   </item>
-   <item row="0" column="2">
+   <item row="1" column="2">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -50,19 +33,39 @@
      </property>
     </spacer>
    </item>
-   <item row="0" column="5">
+   <item row="1" column="0">
+    <widget class="QPushButton" name="bnLoadTelemetryFromFile">
+     <property name="text">
+      <string>Load from File</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="4">
+    <widget class="QComboBox" name="cmbScheduleList"/>
+   </item>
+   <item row="1" column="3">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Load update rates:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="bnSaveTelemetryToFile">
+     <property name="text">
+      <string>Save to File</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="5">
     <widget class="QPushButton" name="bnApplySchedule">
      <property name="text">
       <string>Apply</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="QPushButton" name="bnLoadTelemetryFromFile">
-     <property name="text">
-      <string>Load from File</string>
-     </property>
-    </widget>
+   <item row="0" column="0" colspan="6">
+    <widget class="QTableWidget" name="tableWidgetDummy"/>
    </item>
   </layout>
  </widget>
