Android Serial: Attempt to open serial port

--- a/androidgcs/res/values/arrays.xml
+++ b/androidgcs/res/values/arrays.xml
@@ -5,13 +5,15 @@
         <item>Bluetooth</item>
         <item>Network</item>
         <item>HID</item>
-    </string-array>
+        <item>Serial</item>
+        </string-array>
     <string-array name="connectTypeValues">
         <item>0</item>
         <item>2</item>
         <item>3</item>
         <item>4</item>
-   </string-array>
+        <item>5</item>
+        </string-array>
     <string-array name="controllerTypeArray">
         <item>Mode 1</item>
         <item>Mode 2</item>
