--- a/ground/gcs/src/plugins/config/output.ui
+++ b/ground/gcs/src/plugins/config/output.ui
@@ -540,11 +540,11 @@ Leave at 50Hz for fixed wing.</string>
                </layout>
               </item>
               <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_2">
+               <layout class="QGridLayout" name="gridLayout_2">
                 <property name="margin">
                  <number>12</number>
                 </property>
-                <item>
+                <item row="0" column="0">
                  <widget class="QCheckBox" name="spinningArmed">
                   <property name="minimumSize">
                    <size>
@@ -557,7 +557,7 @@ Leave at 50Hz for fixed wing.</string>
                   </property>
                  </widget>
                 </item>
-                <item>
+                <item row="0" column="1">
                  <spacer name="horizontalSpacer_2">
                   <property name="orientation">
                    <enum>Qt::Horizontal</enum>
@@ -569,6 +569,16 @@ Leave at 50Hz for fixed wing.</string>
                    </size>
                   </property>
                  </spacer>
+                </item>
+                <item row="1" column="0">
+                 <widget class="QPushButton" name="bnServoTrim">
+                  <property name="toolTip">
+                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Only enabled for fixed-wing aircraft. This takes the current aileron, elevator, and rudder servo positions and sets them as the neutral position.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;p&gt;The instructions to use this are:&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;p&gt;1) Using the transmitter trim tabs, trim the plane for level flight. Land.&lt;/p&gt;&lt;p&gt;2) Press this button.&lt;/p&gt;&lt;p&gt;3) The neutral values will be updated to the current servo values.&lt;/p&gt;&lt;p&gt;3a) As a consequence, the servos will jump to untrimmed positions, until the transmitter trim tabs are returned to 0.&lt;/p&gt;&lt;p&gt;4) Therefore, set the transmitter trim tabs to 0. The plane should now fly straight and level. &lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  </property>
+                  <property name="text">
+                   <string>Set fixed-wing trim</string>
+                  </property>
+                 </widget>
                 </item>
                </layout>
               </item>
