--- a/androidgcs/res/xml/preferences.xml
+++ b/androidgcs/res/xml/preferences.xml
@@ -19,5 +19,10 @@
 		    android:key="bluetooth_mac"
     		android:title="Bluetooth Device"
     		android:dialogTitle="Choose Bluetooth Device" />
+		<ListPreference android:title="Map Type"
+			android:key="map_type" android:summary="@string/preference_connection_method_summary"
+			android:defaultValue="1" android:entries="@array/mapTypeArray"
+			android:entryValues="@array/mapTypeValues" />
+
 	</PreferenceCategory>
 </PreferenceScreen>
