--- a/androidgcs/res/xml/preferences.xml
+++ b/androidgcs/res/xml/preferences.xml
@@ -5,7 +5,7 @@
 			android:key="autoconnect" />
 		<ListPreference android:title="@string/preference_checkbox_connection_type"
 			android:key="connection_type" android:summary="@string/preference_connection_method_summary"
-			android:defaultValue="None" android:entries="@array/connectTypeArray"
+			android:defaultValue="0" android:entries="@array/connectTypeArray"
 			android:entryValues="@array/connectTypeValues" />
 		<EditTextPreference android:name="ip_address"
 			android:summary="Enter a TCP/IP address here"
