--- a/androidgcs/res/layout/pfd.xml
+++ b/androidgcs/res/layout/pfd.xml
@@ -33,5 +33,13 @@
 	    android:layout_height="wrap_content"
 	    android:layout_alignRight="@+id/attitude_view"
 	    android:layout_centerVertical="true" />
-     
+
+	<org.taulabs.androidgcs.views.BatteryView
+	    android:id="@+id/battery_view"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_above="@+id/gps_view"
+	    android:layout_centerHorizontal="true"
+	    android:visibility="invisible" />
+
 </RelativeLayout>
