Board Plugin: Fix image paths

--- a/ground/gcs/src/plugins/boards_openpilot/openpilot.qrc
+++ b/ground/gcs/src/plugins/boards_openpilot/openpilot.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/images">
+    <qresource prefix="/openpilot">
         <file>images/cc.png</file>
         <file>images/cc3d.png</file>
         <file>images/pipx.svg</file>
