--- a/ground/gcs/src/plugins/boards_taulabs/taulabs.qrc
+++ b/ground/gcs/src/plugins/boards_taulabs/taulabs.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/images">
+    <qresource prefix="/taulabs">
         <file>images/freedom.png</file>
         <file>images/sparky.png</file>
     </qresource>
