--- a/ground/gcs/src/plugins/boards_stm/stm.qrc
+++ b/ground/gcs/src/plugins/boards_stm/stm.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/images">
+    <qresource prefix="/stm">
         <file>images/flyingf3.png</file>
     </qresource>
 </RCC>
