--- a/androidgcs/res/layout/attitude_adjustment.xml
+++ b/androidgcs/res/layout/attitude_adjustment.xml
@@ -8,25 +8,28 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="These buttons only work while disarmed."
+        android:text="@string/these_buttons_only_work_while_disarmed_"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <Button
-        android:id="@+id/reset_home_altitude"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/reset_home_altitude" />
 
     <Button
         android:id="@+id/reset_home_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/reset_home_location" />
+        android:text="@string/reset_home_location"
+        android:onClick="homeToUav" />
+
+    <Button
+        android:id="@+id/reset_home_altitude"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/reset_home_altitude"
+        android:onClick="homeAltitudeToUav" />
 
     <Button
         android:id="@+id/reset_home_to_tablet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reset Home to Tablet" />
+        android:text="@string/reset_home_to_tablet"
+        android:onClick="homeToTablet" />
     
 </LinearLayout>
