Tools Make GUI Removed green as font color. Fixed revert to black for color. Handled cancelation message.

--- a/shared/make_gui/mainwindow.ui
+++ b/shared/make_gui/mainwindow.ui
@@ -243,7 +243,7 @@
     <item>
      <widget class="QPushButton" name="cancelProcessPB">
       <property name="text">
-       <string>Cancel Running process</string>
+       <string>Cancel running process</string>
       </property>
      </widget>
     </item>
