Android Home: enable advanced screens with option
Right now this is just the tablet control screen which is
enabled.  Later will include the path planning screen too.

--- a/androidgcs/res/xml/preferences.xml
+++ b/androidgcs/res/xml/preferences.xml
@@ -23,6 +23,8 @@
 			android:key="map_type" android:summary="@string/preference_connection_method_summary"
 			android:defaultValue="1" android:entries="@array/mapTypeArray"
 			android:entryValues="@array/mapTypeValues" />
-
+		<CheckBoxPreference android:title="Advanced Screens"
+			android:key="@string/advanced_screens" />
+		
 	</PreferenceCategory>
 </PreferenceScreen>
