--- a/ground/gcs/src/plugins/pathplanner/pathplanner.ui
+++ b/ground/gcs/src/plugins/pathplanner/pathplanner.ui
@@ -119,6 +119,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QToolButton" name="tbFilletPath">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
