Fillet Path: add icon to PathPlanner widget

--- a/ground/gcs/src/plugins/pathplanner/pathplanner.qrc
+++ b/ground/gcs/src/plugins/pathplanner/pathplanner.qrc
@@ -36,5 +36,6 @@
         <file>images/forward_alt.png</file>
         <file>images/star.png</file>
         <file>images/down_alt.png</file>
+        <file>images/fillet_path.png</file>
     </qresource>
 </RCC>
