--- a/ground/gcs/src/plugins/pathplanner/pathplanner.ui
+++ b/ground/gcs/src/plugins/pathplanner/pathplanner.ui
@@ -119,7 +119,26 @@
       </widget>
      </item>
      <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
       <widget class="QToolButton" name="tbFilletPath">
+       <property name="toolTip">
+        <string>Fillet the path</string>
+       </property>
        <property name="text">
         <string>...</string>
        </property>
