Path filleting: ability to unfillet a path
Now the path is saved when the fillet button is clicked.  Then
the unfillet button will restore the previous path after a succesful
filleting.

--- a/ground/gcs/src/plugins/pathplanner/pathplanner.qrc
+++ b/ground/gcs/src/plugins/pathplanner/pathplanner.qrc
@@ -37,5 +37,6 @@
         <file>images/star.png</file>
         <file>images/down_alt.png</file>
         <file>images/fillet_path.png</file>
+        <file>images/unfillet_path.png</file>
     </qresource>
 </RCC>
