--- a/ground/gcs/src/plugins/telemetryscheduler/telemetryscheduler.ui
+++ b/ground/gcs/src/plugins/telemetryscheduler/telemetryscheduler.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>653</width>
-    <height>296</height>
+    <width>690</width>
+    <height>519</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -20,7 +20,7 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="2">
+   <item row="4" column="2">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -33,39 +33,121 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="0">
+   <item row="4" column="0">
     <widget class="QPushButton" name="bnLoadTelemetryFromFile">
      <property name="text">
       <string>Load from File</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="4">
+   <item row="4" column="4">
     <widget class="QComboBox" name="cmbScheduleList"/>
    </item>
-   <item row="1" column="3">
+   <item row="4" column="3">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Load update rates:</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="4" column="5">
+    <widget class="QPushButton" name="bnApplySchedule">
+     <property name="maximumSize">
+      <size>
+       <width>100</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>Apply</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
     <widget class="QPushButton" name="bnSaveTelemetryToFile">
      <property name="text">
       <string>Save to File</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="5">
-    <widget class="QPushButton" name="bnApplySchedule">
-     <property name="text">
-      <string>Apply</string>
+   <item row="0" column="0" rowspan="3" colspan="5">
+    <widget class="QTableWidget" name="tableWidgetDummy"/>
+   </item>
+   <item row="2" column="5">
+    <widget class="QFrame" name="frame">
+     <property name="maximumSize">
+      <size>
+       <width>100</width>
+       <height>16777215</height>
+      </size>
      </property>
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <property name="lineWidth">
+      <number>1</number>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="margin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QPushButton" name="bnAddTelemetryColumn">
+        <property name="maximumSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>+</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="bnRemoveTelemetryColumn">
+        <property name="maximumSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>-</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>60</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
-   <item row="0" column="0" colspan="6">
-    <widget class="QTableWidget" name="tableWidgetDummy"/>
+   <item row="1" column="5">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
