Fixed typo in compass.svg file name.

--- a/ground/gcs/src/libs/opmapcontrol/src/mapwidget/mapresources.qrc
+++ b/ground/gcs/src/libs/opmapcontrol/src/mapwidget/mapresources.qrc
@@ -2,7 +2,7 @@
     <qresource prefix="/markers">
         <file>images/bigMarkerGreen.png</file>
         <file>images/marker.png</file>
-        <file>images/compas.svg</file>
+        <file>images/compass.svg</file>
         <file>images/airplane.svg</file>
         <file>images/home.png</file>
         <file>images/home.svg</file>
