Added wind_compass.svg. The SVG artwork is a proof of concept modified from the existing compass.svg file.

--- a/ground/gcs/src/libs/opmapcontrol/src/mapwidget/mapresources.qrc
+++ b/ground/gcs/src/libs/opmapcontrol/src/mapwidget/mapresources.qrc
@@ -3,6 +3,7 @@
         <file>images/bigMarkerGreen.png</file>
         <file>images/marker.png</file>
         <file>images/compass.svg</file>
+        <file>images/wind_compass.svg</file>
         <file>images/airplane.svg</file>
         <file>images/home.png</file>
         <file>images/home.svg</file>
