SetupWizard: select controller using the board plugins
Now shows the correct board name provided by the board plugin
architecture.

This still leaves a lot of cruft related to hardcoded board specifics
and a complete absences of commented code but it is progress.

--- a/ground/gcs/src/plugins/setupwizard/pages/controllerpage.ui
+++ b/ground/gcs/src/plugins/setupwizard/pages/controllerpage.ui
@@ -127,15 +127,15 @@ p, li { white-space: pre-wrap; }
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="boardTypeCombo">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
+        <widget class="QLabel" name="boardTypeLabel">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Unknown</string>
          </property>
         </widget>
        </item>
