--- a/ground/gcs/src/plugins/setupwizard/pages/outputcalibrationpage.ui
+++ b/ground/gcs/src/plugins/setupwizard/pages/outputcalibrationpage.ui
@@ -66,7 +66,11 @@ p, li { white-space: pre-wrap; }
        <item>
         <widget class="QLabel" name="label_4">
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;In this step we will set the neutral rate for the motor highlighted in the illustration to the right. &lt;br/&gt;Plase pay attention to the details and in particular the motors position and its rotation direction.&lt;/p&gt;&lt;p&gt;To find the neutral rate for this engine, press the Start button below and slide the slider to the right until the engine just starts to spin stably. &lt;br/&gt;&lt;br/&gt;When done press button again to stop.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>In this step we will set the neutral rate for the motor highlighted in the illustration to the right. 
+Plase pay attention to the details and in particular the motors position and its rotation direction.
+To find the neutral rate for this engine, press the Start button below and slide the slider to the right until the engine just starts to spin stably. 
+
+When done press button again to stop.</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
