--- a/ground/gcs/src/plugins/config/defaulthwsettings.ui
+++ b/ground/gcs/src/plugins/config/defaulthwsettings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>519</width>
+    <height>492</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,25 @@
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2"/>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QTabWidget" name="tabWidget">
+        <property name="currentIndex">
+         <number>0</number>
+        </property>
+        <widget class="QWidget" name="hardware">
+         <attribute name="title">
+          <string>HW settings</string>
+         </attribute>
+        </widget>
+        <widget class="QWidget" name="modules">
+         <attribute name="title">
+          <string>Modules</string>
+         </attribute>
+        </widget>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
